--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Welcome</title>
 </head>
 <body>
-  <form action="">
+  <form action="login" method="post">
     <label for="name">Enter your name:</label>
     <input type="text" id="name" name="name" required>
     <label for="email">Enter your email:</label>
